# inspircd

./: .Makefile.inc  .cvsignore  .gdbargs  .gitignore  .inspircd.inc  .mailmap  .org.inspircd.plist.inc  .travis.yml  CMakeLists.txt  Dockerfile  Makefile.FreeBSD  Makefile.Linux  README.md  conanfile.txt  configure  core  m_capnotify.cpp  m_invitenotify.cpp  makeconf  modulemanager  run-cc.pl  sources.list
ircd/src/: CMakeLists.txt  base.cpp  channels.cpp  clientprotocol.cpp  command_parse.cpp  configreader.cpp  dynamic.cpp  fileutils.cpp  hashcomp.cpp  inspircd.cpp  inspsocket.cpp  inspstring.cpp  listensocket.cpp  listmode.cpp  main.cpp  modulemanager.cpp  timer.cpp  users.cpp  xline.cpp
lib/tre/: CMakeLists.txt  regcomp.c  regerror.c  regex.h  regexec.c  tre-ast.c  tre-ast.h  tre-compile.c  tre-compile.h  tre-config.h  tre-filter.c  tre-filter.h  tre-internal.h  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-match-utils.h  tre-mem.c  tre-mem.h  tre-parse.c  tre-parse.h  tre-stack.c  tre-stack.h  tre.h  xmalloc.c  xmalloc.h
modules/extra/: CMakeLists.txt  argon2.cpp  geo_maxmind.cpp  hash_argon2.cpp  hash_gnutls.cpp  ldap.cpp  log_json.cpp  log_syslog.cpp  mysql.cpp  pgsql.cpp  regex_pcre2.cpp  regex_posix.cpp  regex_re2.cpp  regex_tre.cpp  rehashsignal.cpp  sqlite3.cpp  ssl_gnutls.cpp  ssl_openssl.cpp
servicesd/modules/: CMakeLists.txt  bs_autoassign.cpp  cs_statusupdate.cpp  fantasy.cpp  m_dns.cpp  m_dnsbl.cpp  m_helpchan.cpp  m_httpd.cpp  m_proxyscan.cpp  m_redis.cpp  m_rewrite.cpp  m_sasl.cpp  m_xmlrpc.cpp  m_xmlrpc_main.cpp  ns_maxemail.cpp
servicesd/src/: CMakeLists.txt  access.cpp  account.cpp  base.cpp  base64.cpp  bots.cpp  channels.cpp  command.cpp  config.cpp  extensible.cpp  hashcomp.cpp  init.cpp  language.cpp  logger.cpp  mail.cpp  main.cpp  memos.cpp  messages.cpp  misc.cpp  modes.cpp  module.cpp  modulemanager.cpp  nickalias.cpp  nickcore.cpp  opertype.cpp  pipeengine.cpp  process.cpp  protocol.cpp  regchannel.cpp  serialize.cpp  servers.cpp  siphash.cpp  socket_clients.cpp  socket_transport.cpp  sockets.cpp  threadengine.cpp  timers.cpp  uplink.cpp  users.cpp  xline.cpp
src/: .cvsignore  CMakeLists.txt  InspIRCd.dev  InspIRCd.layout  Makefile  Makefile.FreeBSD  Makefile.Linux  aes.cpp  bancache.cpp  base.cpp  casemap.cpp  channelmanager.cpp  channels.cpp  cidr.cpp  clientprotocol.cpp  cmd_admin.cpp  cmd_away.cpp  cmd_clearcache.cpp  cmd_commands.cpp  cmd_connect.cpp  cmd_die.cpp  cmd_eline.cpp  cmd_gline.cpp  cmd_info.cpp  cmd_invite.cpp  cmd_ison.cpp  cmd_join.cpp  cmd_kick.cpp  cmd_kill.cpp  cmd_kline.cpp  cmd_links.cpp  cmd_list.cpp  cmd_loadmodule.cpp  cmd_lusers.cpp  cmd_map.cpp  cmd_mode.cpp  cmd_modules.cpp  cmd_motd.cpp  cmd_names.cpp  cmd_nick.cpp  (+95 more)
src/cmake/: inspircd.cmake  version.cmake
src/commands/: cmd_admin.cpp  cmd_away.cpp  cmd_clearcache.cpp  cmd_commands.cpp  cmd_connect.cpp  cmd_die.cpp  cmd_dns.cpp  cmd_eline.cpp  cmd_gline.cpp  cmd_hostname_lookup.cpp  cmd_info.cpp  cmd_invite.cpp  cmd_ison.cpp  cmd_join.cpp  cmd_kick.cpp  cmd_kill.cpp  cmd_kline.cpp  cmd_links.cpp  cmd_list.cpp  cmd_loadmodule.cpp  cmd_lusers.cpp  cmd_map.cpp  cmd_mode.cpp  cmd_modenotice.cpp  cmd_modules.cpp  cmd_motd.cpp  cmd_names.cpp  cmd_nick.cpp  cmd_notice.cpp  cmd_oper.cpp  cmd_part.cpp  cmd_pass.cpp  cmd_ping.cpp  cmd_pong.cpp  cmd_privmsg.cpp  cmd_qline.cpp  cmd_quit.cpp  cmd_rehash.cpp  cmd_reloadmodule.cpp  cmd_restart.cpp  (+16 more)
src/coremods/: CMakeLists.txt  core_clients.cpp  core_connect.cpp  core_dns.cpp  core_hostname_lookup.cpp  core_ison.cpp  core_list.cpp  core_loadmodule.cpp  core_lusers.cpp  core_message.cpp  core_mode.cpp  core_privmsg.cpp  core_reloadmodule.cpp  core_serialize_rfc.cpp  core_server.cpp  core_squit.cpp  core_stats.cpp  core_stub.cpp  core_userhost.cpp  core_wallops.cpp  core_who.cpp  core_whois.cpp  core_whowas.cpp
src/modes/: Makefile  cmode_b.cpp  cmode_h.cpp  cmode_i.cpp  cmode_k.cpp  cmode_l.cpp  cmode_m.cpp  cmode_n.cpp  cmode_o.cpp  cmode_p.cpp  cmode_s.cpp  cmode_t.cpp  cmode_v.cpp  umode_i.cpp  umode_n.cpp  umode_o.cpp  umode_s.cpp  umode_w.cpp
src/modules/: .cvsignore  .make  CMakeLists.txt  Makefile  Makefile.FreeBSD  Makefile.Linux  account.h  cmd_clearcache.cpp  cmd_invite.cpp  cmd_map.cpp  cmd_restart.cpp  cmd_rules.cpp  cmd_stats.cpp  cmd_topic.cpp  cmd_userhost.cpp  flatfile_auth.h  hash.h  httpclient.h  httpd.h  json.h  m_abbreviation.cpp  m_account.cpp  m_account_flags.cpp  m_account_list.cpp  m_account_modes.cpp  m_account_nick_ownership.cpp  m_account_register.cpp  m_account_vhost.cpp  m_alias.cpp  m_allowinvite.cpp  m_alltime.cpp  m_antibear.cpp  m_antibottler.cpp  m_anticaps.cpp  m_auditorium.cpp  m_authcache.cpp  m_autoop.cpp  m_banexception.cpp  m_bannegate.cpp  m_banredirect.cpp  (+292 more)
src/python/: common.py  console.py  module.py
src/scripts/: CMakeLists.txt  apparmor.in  deploy-tls.sh.in  help.txt.in  inspircd-test-tls.1.in  inspircd.1.in  inspircd.in  inspircd.openrc.in  inspircd.service.in  logrotate.in  org.inspircd.plist.in
src/socketengines/: CMakeLists.txt  epoll.cpp  kqueue.cpp  poll.cpp  select.cpp  socketengine_epoll.cpp  socketengine_iocp.cpp  socketengine_kqueue.cpp  socketengine_poll.cpp  socketengine_ports.cpp  socketengine_select.cpp
test/: CMakeLists.txt  config.h.cmake  inspircd_test.cpp  inspircd_test.h
win/: .gitignore  CMakeLists.txt  NSIS.template.in  README.txt  build.ps1  cert.pem  colors.h  colours.h  compress.bat  conanfile.txt  config.h.cmake  configure.cpp  configure.vcxproj  configureVC71.vcproj  configureVC80.vcproj  configureVC90.vcproj  inspircd-noextras.nsi  inspircd.nsi  inspircd.rc.cmake  inspircd.vcxproj  inspircdVC71.sln  inspircdVC71.vcproj  inspircdVC80.sln  inspircdVC80.vcproj  inspircdVC90.sln  inspircdVC90.vcproj  inspircdVC90.vcxproj  inspircd_config.h  inspircd_config.h.cmake  inspircd_memory_functions.cpp  inspircd_namedpipe.cpp  inspircd_namedpipe.h  inspircd_se_config.h  inspircd_version.h.cmake  inspircd_win32wrapper.cpp  inspircd_win32wrapper.h  key.pem  m_spanningtree.vcxproj  m_spanningtreeVC71.vcproj  m_spanningtreeVC80.vcproj  (+19 more)
(+2316 files in other folders)
