cmake_minimum_required(VERSION 3.16.3)

project(clandestine)

set(CMAKE_CXX_STANDARD 11)
set(PROJECT_VERSION "clandestine-IRCd-3.15.0")
set(CMAKE_BUILD_TYPE Release)

set(VERSION_MAJOR 3)
set(VERSION_MINOR 15)
set(VERSION_PATCH 0)
set(VERSION_EXTRA "none")
set(BUILD 0)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(UTF8CPP REQUIRED)
find_package(LIBXCRYPT REQUIRED)
find_package(PCRE2 REQUIRED)
find_package(PCRE REQUIRED)
find_package(RE2 REQUIRED)
find_package(HTTP_PARSER REQUIRED)
find_package(ARGON2 REQUIRED)
find_package(HASH-LIBRARY REQUIRED)
find_package(MAXMINDDB REQUIRED)
find_package(PostgreSQL REQUIRED)
find_package(LIBQRENCODE REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(SQLite3 REQUIRED)
find_package(GnuTLS REQUIRED)
find_package(MbedTLS REQUIRED)
find_package(MARIADB-CONNECTOR-C REQUIRED)

add_subdirectory(lib/tre)
add_subdirectory(ircd/src/)
add_subdirectory(ircd/src/coremods/)
add_subdirectory(ircd/src/modules/)
add_subdirectory(servicesd/src)
add_subdirectory(servicesd/modules)
